--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@uidotdev/usehooks": "^2.4.1",
+    "framer-motion": "^10.18.0",
     "gh-pages": "^6.1.1",
     "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
